<resources>
    <string name="app_name">USCovidStatistics</string>
    <string name="app_package">com.example.uscovidstatistics</string>
    <string name="app_revised_name">Covid Statistics</string>

    <string name="bot_menu_my_location">My Location Data</string>
    <string name="bot_menu_location">Select Location</string>
    <string name="bot_menu_notifications">Notifications</string>

    <string name="base_covid_stats">Statistics</string>
    <string name="base_covid_cases">Cases Open</string>

    <string name="cases_active">Active Cases</string>
    <string name="cases_closed">Closed Cases</string>
    <string name="cases_critical">Critical Cases</string>
    <string name="cases_deaths">Current Deaths</string>
    <string name="cases_header">Global Cases</string>
    <string name="cases_infected">Of those infected . . .</string>
    <string name="cases_mild">Mild Cases</string>
    <string name="cases_outcome">With the outcomes of . . .</string>
    <string name="cases_recovered">Recovered/Discharged</string>
    <string name="cases_tests">Tests Conducted:</string>
    <string name="covid_state_stats">State Statistics</string>

    <string name="data_updated">Data Updated</string>
    <string name="details_header_perOneMillion">Covid Metrics Per One Million</string>
    <string name="details_casesPerOneMil">Cases:</string>
    <string name="details_deathsPerOneMil">Deaths:</string>
    <string name="details_testsPerOneMil">Tests:</string>
    <string name="details_activePerOneMil">Active:</string>
    <string name="details_recoveredPerOneMil">Recovered:</string>
    <string name="details_criticalPerOneMil">Critical:</string>
    <string name="details_PerOneMil">in every 1,000,000 people</string>
    <string name="details_oneCasePerPeople"></string>
    <string name="details_oneDeathPerPeople"></string>
    <string name="details_oneTestPerPeople"></string>

    <string name="global_stats">Global Coronavirus Statistics</string>

    <string name="header_cases">Total Cases:</string>
    <string name="header_deaths">Patient Deaths:</string>
    <string name="header_population">Current Population:</string>
    <string name="header_recovered">Patients Recovered:</string>
    <string name="header_tests">Total Tests:</string>
    <string name="header_today_cases">Cases from Today:</string>
    <string name="header_today_deaths">Deaths from Today:</string>

    <string name="loading">Loading information . . .</string>

    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_gps">Location</string>
    <string name="menu_saved_locations">Saved Locations</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_header">Select a Continent to View</string>
    <string name="menu_settings_na">North America</string>
    <string name="menu_settings_sa">South America</string>
    <string name="menu_settings_eu">Europe</string>
    <string name="menu_settings_af">Africa</string>
    <string name="menu_settings_as">Asia</string>
    <string name="menu_settings_au">Australia/Oceania</string>

    <string name="no_connection">Could not get data at this time</string>
    <string name="no_location">Could not find auto-find location</string>

    <string name="preference_file_key">covid_statistics_user_preferences</string>
    <string name="preference_saved_location">preference_saved_location</string>
    <string name="preference_gps">user_preference_gps</string>
    <string name="preference_gps_desc">Display your location\'s Covid data when you open the app.\n\nRequires GPS Permission</string>
    <string name="preference_gps_title">Open App to Your Location</string>
    <string name="preference_frequency">user_preference_frequency</string>
    <string name="preference_freq_desc">How often do you want the app to check for updated information?\n\nChecking less often may increase performance.</string>
    <string name="preference_freq_title">Update Frequency</string>

    <!-- Notification Preferences -->
    <string name="preference_notifications">user_preference_notifications</string>
    <string name="preference_notification_desc">When the app is closed, how often the it will update data and send a notification.\n\nChecking less often will increase performance.</string>
    <string name="preference_notification_freq">Notification Frequency</string>
    <string name="preference_notification_frequency">user_preference_notif_frequency</string>
    <string name="preference_notif_add_location">Add Locations</string>
    <string name="preference_notif_advanced">Advanced Notification Settings</string>
    <string name="preference_notif_cases">user_preference_notif_cases</string>
    <string name="preference_notifications_cases">Receive push notifications about active cases.</string>
    <string name="preference_notif_cases_location">user_preference_notif_cases_location</string>
    <string name="preference_notif_deaths">user_preference_notif_deaths</string>
    <string name="preference_notifications_deaths">Receive push notifications about deaths.</string>
    <string name="preference_notif_locations">user_preference_notif_locations</string>
    <string name="preference_notif_enter_locations">Enter up to 3 locations, separated by commas, to receive push notifications for.\n\nCountry names should match how they\'re displayed in the search list.</string>
    <string name="preference_notif_desc">Change the type of notifications you\'d like.</string>
    <string name="preference_notif_title">Enable Push Notifications</string>
    <string name="preference_notif_recovered">user_preference_notif_recovered</string>
    <string name="preference_notifications_recovered">Receive push notifications about recovered cases.</string>

    <string name="preference_title_requests">Network &amp; Location</string>
    <string name="preference_title_notifications">Notifications</string>

    <string name="rv_cases">Cases</string>
    <string name="rv_country">Region</string>
    <string name="rv_deaths">Deaths</string>
    <string name="rv_projected">Projected Values for the Next Few Days</string>
    <string name="rv_recovered">Recovered</string>

    <string name="saved_locations">Saved Locations Below</string>
    <string name="snackbar_clk_enable">ENABLE</string>
    <string name="snackbar_clk_retry">RETRY</string>
    <string name="snackbar_clk_undo">UNDO</string>
    <string name="snackbar_error_timeout">Could not connect to the server</string>
    <string name="snackbar_error_wifi">No Connection Available</string>
    <string name="snackbar_favorite_added">Added location to homepage</string>
    <string name="snackbar_favorite_removed">Removed location from homepage</string>
    <string name="snackbar_null">Could not display case information</string>
    <string name="snackbar_region">Added country to Homepage</string>
    <string name="snackbar_update">Cases Updated</string>
    <string name="snackbar_wifi_enabled">Wifi Enabled</string>
    <string name="preference_title_notifications_key">user_pref_notif_title_key</string>

    <string-array name="territories_list">
        <item>Anguilla</item>
        <item>Aruba</item>
        <item>Bermuda</item>
        <item>British Virgin Islands</item>
        <item>Caribbean Netherlands</item>
        <item>Cayman Islands</item>
        <item>Channel Islands</item>
        <item>Curaçao</item>
        <item>Falkland Islands (Malvinas)</item>
        <item>Faroe Islands</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>Gibraltar</item>
        <item>Guadeloupe</item>
        <item>Greenland</item>
        <item>Holy See (Vatican City State)</item>
        <item>Hong Kong</item>
        <item>Isle of Man</item>
        <item>Macao</item>
        <item>Martinique</item>
        <item>Mayotte</item>
        <item>Montserrat</item>
        <item>Myanmar</item>
        <item>New Caledonia</item>
        <item>Palestine</item>
        <item>Réunion</item>
        <item>Saint Martin</item>
        <item>Saint Pierre Miquelon</item>
        <item>Sint Maarten</item>
        <item>St. Barth</item>
        <item>Turks and Caicos Islands</item>
    </string-array>

    <string-array name="france_territories_list">
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>Guadeloupe</item>
        <item>Martinique</item>
        <item>Mayotte</item>
        <item>New Caledonia</item>
        <item>Réunion</item>
        <item>Saint Martin</item>
        <item>Saint Pierre Miquelon</item>
        <item>St. Barth</item>
    </string-array>

    <string-array name="uk_territories_list">
        <item>Anguilla</item>
        <item>Bermuda</item>
        <item>British Virgin Islands</item>
        <item>Cayman Islands</item>
        <item>Channel Islands</item>
        <item>Gibraltar</item>
        <item>Falkland Islands (Malvinas)</item>
        <item>Isle of Man</item>
        <item>Montserrat</item>
        <item>Turks and Caicos Islands</item>
    </string-array>

    <string-array name="netherlands_territories_list">
        <item>Aruba</item>
        <item>Curaçao</item>
        <item>Sint Maarten</item>
    </string-array>

    <string-array name="china_territories_list">
        <item>Hong Kong</item>
    </string-array>

    <string-array name="denmark_territories_list">
        <item>Faroe Islands</item>
        <item>Greenland</item>
    </string-array>

    <string-array name="burma_territories_list">
        <item>Myanmar</item>
    </string-array>

    <string-array name="no_data_territories_list">
        <item>Caribbean Netherlands</item>
        <item>bonaire, sint eustatius and saba</item>
        <item>Holy See (Vatican City State)</item>
        <item>Macao</item>
        <item>MS Zaandam</item>
        <item>Palestine</item>
    </string-array>

    <string-array name="us_territories">
        <item>Guam</item>
        <item>Northern Mariana Islands</item>
        <item>Puerto Rico</item>
        <item>United States Virgin Islands</item>
    </string-array>

    <string-array name="us_other">
        <item>Diamond Princess Ship</item>
        <item>Federal Prisons</item>
        <item>Grand Princess Ship</item>
        <item>Navajo Nation</item>
        <item>US Military</item>
        <item>Veteran Affairs</item>
        <item>Wuhan Repatriated</item>
    </string-array>
</resources>
