<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="@string/preference_gps"
        app:title="@string/preference_gps_title"
        app:defaultValue="false"
        app:summary="@string/preference_gps_desc"/>

    <ListPreference
        android:key="@string/preference_frequency"
        android:entries="@array/frequency_entries"
        android:entryValues="@array/frequency_values"
        android:summary="@string/preference_freq_desc"
        android:defaultValue="5"
        android:title="@string/preference_freq_title"
        android:negativeButtonText="Cancel" />

    <SwitchPreferenceCompat
        app:key="@string/preference_notifications"
        app:title="@string/preference_notif_title" />

</androidx.preference.PreferenceScreen>