<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rv_region"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:gravity="center"
                    android:text="@string/rv_country"
                    android:textSize="12sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rv_cases"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:gravity="center"
                    android:text="@string/rv_cases"
                    android:textSize="12sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rv_recovered"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:gravity="center"
                    android:text="@string/rv_recovered"
                    android:textSize="12sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rv_deaths"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:gravity="center"
                    android:text="@string/rv_deaths"
                    android:textSize="12sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

</LinearLayout>